{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1431,
  "lineage": "b7309002-b095-75c2-78c9-1f6a9ced7b10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d2e31d4e93ff4d7",
            "arn": "arn:aws:ec2:us-east-1:340341089363:elastic-ip/eipalloc-06d2e31d4e93ff4d7",
            "association_id": "eipassoc-02a8fc1e5f87e9294",
            "domain": "vpc",
            "id": "eipalloc-06d2e31d4e93ff4d7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-071aea198625383e1",
            "private_dns": "ip-10-0-2-136.ec2.internal",
            "private_ip": "10.0.2.136",
            "public_dns": "ec2-50-17-137-36.compute-1.amazonaws.com",
            "public_ip": "50.17.137.36",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT Gateway EIP"
            },
            "tags_all": {
              "Name": "NAT Gateway EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "PublicWebTemplate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e4ba81d75ebeb6a",
            "arn": "arn:aws:ec2:us-east-1:340341089363:instance/i-0f6bbc87c837ec9cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6bbc87c837ec9cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "keys/la_maldita_llave",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb0771841c08c99c",
            "private_dns": "ip-10-0-1-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.156",
            "public_ip": "44.198.177.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b61bfd3e6ac7f29",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0897a18682d69f435",
            "tags": {
              "Name": "frontend-1"
            },
            "tags_all": {
              "Name": "frontend-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09aeb17eed8af8b72"
            ]
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.webserver-security-group",
            "aws_subnet.public-web-subnet-1",
            "aws_vpc.vpc_alumno04",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-app-template",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09e4ba81d75ebeb6a",
            "arn": "arn:aws:ec2:us-east-1:340341089363:instance/i-09500ba16135cbdd2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09500ba16135cbdd2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ecbf6b092c95a4d0",
            "private_dns": "ip-10-0-3-188.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.188",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c6fe36cdac4ac755",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee50e99198bfe2f2",
            "tags": {
              "Name": "app-asg"
            },
            "tags_all": {
              "Name": "app-asg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eaf209db277ee4a3"
            ]
          },
          "dependencies": [
            "aws_security_group.ssh-aws-security-group",
            "aws_subnet.private-app-subnet-1",
            "aws_vpc.vpc_alumno04",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_alumno04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:internet-gateway/igw-0fd27f6ab3147a860",
            "id": "igw-0fd27f6ab3147a860",
            "owner_id": "340341089363",
            "tags": {
              "Name": "TEST igw"
            },
            "tags_all": {
              "Name": "TEST igw"
            },
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:340341089363:loadbalancer/app/web-external-load-balancer/936bb93a0bd9b3f0",
            "arn_suffix": "app/web-external-load-balancer/936bb93a0bd9b3f0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-external-load-balancer-2097382871.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:340341089363:loadbalancer/app/web-external-load-balancer/936bb93a0bd9b3f0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-external-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dcd29d82eaf2d85d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0897a18682d69f435"
              },
              {
                "subnet_id": "subnet-0a0715d45553995fe"
              }
            ],
            "subnets": [
              "subnet-0897a18682d69f435",
              "subnet-0a0715d45553995fe"
            ],
            "tags": {
              "Name": "App load balancer"
            },
            "tags_all": {
              "Name": "App load balancer"
            },
            "vpc_id": "vpc-0ca4ee4060f221d9f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_subnet.public-web-subnet-1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:340341089363:listener/app/web-external-load-balancer/936bb93a0bd9b3f0/bf4d7c4611d135de",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:340341089363:listener/app/web-external-load-balancer/936bb93a0bd9b3f0/bf4d7c4611d135de",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:340341089363:loadbalancer/app/web-external-load-balancer/936bb93a0bd9b3f0",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application-load-balancer",
            "aws_security_group.alb-security-group",
            "aws_subnet.public-web-subnet-1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener_subdomain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:340341089363:listener/app/web-external-load-balancer/936bb93a0bd9b3f0/e7b672c54218355d",
            "certificate_arn": "arn:aws:acm:us-east-1:340341089363:certificate/26e3dab5-945d-4b3b-92c0-c5dc12748b77",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:340341089363:targetgroup/appbalancertgp/fbc42147a0bb1676",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:340341089363:listener/app/web-external-load-balancer/936bb93a0bd9b3f0/e7b672c54218355d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:340341089363:loadbalancer/app/web-external-load-balancer/936bb93a0bd9b3f0",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.vpn_server",
            "aws_acm_certificate_validation.vpn_server",
            "aws_lb.application-load-balancer",
            "aws_lb_target_group.alb-target-group",
            "aws_route53_record.my_dns_record_vpn_server",
            "aws_route53_zone.alumno04",
            "aws_security_group.alb-security-group",
            "aws_subnet.public-web-subnet-1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:340341089363:targetgroup/appbalancertgp/fbc42147a0bb1676",
            "arn_suffix": "targetgroup/appbalancertgp/fbc42147a0bb1676",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:340341089363:targetgroup/appbalancertgp/fbc42147a0bb1676",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:340341089363:loadbalancer/app/web-external-load-balancer/936bb93a0bd9b3f0"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "appbalancertgp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "appbalancertgp"
            },
            "tags_all": {
              "Name": "appbalancertgp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web-attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:340341089363:targetgroup/appbalancertgp/fbc42147a0bb1676-2024120520190938880000000e",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:340341089363:targetgroup/appbalancertgp/fbc42147a0bb1676",
            "target_id": "i-0f6bbc87c837ec9cf"
          },
          "dependencies": [
            "aws_instance.PublicWebTemplate",
            "aws_lb_target_group.alb-target-group",
            "aws_security_group.alb-security-group",
            "aws_security_group.webserver-security-group",
            "aws_subnet.public-web-subnet-1",
            "aws_vpc.vpc_alumno04",
            "data.aws_ami.amazon_linux_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d2e31d4e93ff4d7",
            "association_id": "eipassoc-02a8fc1e5f87e9294",
            "connectivity_type": "public",
            "id": "nat-004a913a8132dde69",
            "network_interface_id": "eni-071aea198625383e1",
            "private_ip": "10.0.2.136",
            "public_ip": "50.17.137.36",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a0715d45553995fe",
            "tags": {
              "Name": "NAT Gateway 1"
            },
            "tags_all": {
              "Name": "NAT Gateway 1"
            }
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:route-table/rtb-03296f50ae44ab555",
            "id": "rtb-03296f50ae44ab555",
            "owner_id": "340341089363",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-004a913a8132dde69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": " Private Route Table"
            },
            "tags_all": {
              "Name": " Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:route-table/rtb-01dfc4a6d55416052",
            "id": "rtb-01dfc4a6d55416052",
            "owner_id": "340341089363",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd27f6ab3147a860",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public route table"
            },
            "tags_all": {
              "Name": "Public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_alumno04",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020e5b1ce0883a653",
            "route_table_id": "rtb-03296f50ae44ab555",
            "subnet_id": "subnet-0ee50e99198bfe2f2"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private-route-table",
            "aws_subnet.private-app-subnet-1",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_route_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bd4e7b06eb19fba",
            "route_table_id": "rtb-03296f50ae44ab555",
            "subnet_id": "subnet-0052649d61b3fade5"
          },
          "dependencies": [
            "aws_eip.eip_nat",
            "aws_nat_gateway.nat_1",
            "aws_route_table.private-route-table",
            "aws_subnet.private-app-subnet-2",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ecb75d68b9ebf7d",
            "route_table_id": "rtb-01dfc4a6d55416052",
            "subnet_id": "subnet-0897a18682d69f435"
          },
          "dependencies": [
            "aws_internet_gateway.igw_alumno04",
            "aws_route_table.public-route-table",
            "aws_subnet.public-web-subnet-1",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fc40772e1c6f937f",
            "route_table_id": "rtb-01dfc4a6d55416052",
            "subnet_id": "subnet-0a0715d45553995fe"
          },
          "dependencies": [
            "aws_internet_gateway.igw_alumno04",
            "aws_route_table.public-route-table",
            "aws_subnet.public-web-subnet-2",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:security-group/sg-0dcd29d82eaf2d85d",
            "description": "Allow HTTP and HTTPS access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dcd29d82eaf2d85d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ALB Security group",
            "name_prefix": "",
            "owner_id": "340341089363",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB Security group"
            },
            "tags_all": {
              "Name": "ALB Security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:security-group/sg-04faccafc923f2009",
            "description": "Enable MYSQL access on port 3306",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04faccafc923f2009",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MYSQL access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09aeb17eed8af8b72"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database server Security group",
            "name_prefix": "",
            "owner_id": "340341089363",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database security group"
            },
            "tags_all": {
              "Name": "Database security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_security_group.webserver-security-group",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-aws-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:security-group/sg-0eaf209db277ee4a3",
            "description": "Enable ssh access on port 22c",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eaf209db277ee4a3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SSH Acess",
            "name_prefix": "",
            "owner_id": "340341089363",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH security group"
            },
            "tags_all": {
              "Name": "SSH security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:security-group/sg-09aeb17eed8af8b72",
            "description": "Allow HTTP and HTTPS inbound traffic on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09aeb17eed8af8b72",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dcd29d82eaf2d85d"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dcd29d82eaf2d85d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Web Server security group",
            "name_prefix": "",
            "owner_id": "340341089363",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server security group"
            },
            "tags_all": {
              "Name": "Web Server security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-security-group",
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:subnet/subnet-0ee50e99198bfe2f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee50e99198bfe2f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "340341089363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 1 - App Tier"
            },
            "tags_all": {
              "Name": "Private subnet 1 - App Tier"
            },
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:subnet/subnet-0052649d61b3fade5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0052649d61b3fade5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "340341089363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 2 - App Tier"
            },
            "tags_all": {
              "Name": "Private subnet 2 - App Tier"
            },
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:subnet/subnet-0fd9ec65ad717e8d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fd9ec65ad717e8d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "340341089363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 1  - DB Tier"
            },
            "tags_all": {
              "Name": "Private subnet 1  - DB Tier"
            },
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:subnet/subnet-03e20f36324bfb090",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03e20f36324bfb090",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "340341089363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 2 - DB Tier"
            },
            "tags_all": {
              "Name": "Private subnet 2 - DB Tier"
            },
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:subnet/subnet-0897a18682d69f435",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0897a18682d69f435",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "340341089363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 1"
            },
            "tags_all": {
              "Name": "Public subnet 1"
            },
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:subnet/subnet-0a0715d45553995fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0715d45553995fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "340341089363",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 2"
            },
            "tags_all": {
              "Name": "Public subnet 2"
            },
            "vpc_id": "vpc-0ca4ee4060f221d9f"
          },
          "dependencies": [
            "aws_vpc.vpc_alumno04"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_alumno04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:340341089363:vpc/vpc-0ca4ee4060f221d9f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e7b818b868c4631",
            "default_route_table_id": "rtb-0abaa6b10a62919c6",
            "default_security_group_id": "sg-0c179b1ba8dc2976d",
            "dhcp_options_id": "dopt-074c31c85c089f9d1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ca4ee4060f221d9f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abaa6b10a62919c6",
            "owner_id": "340341089363",
            "tags": {
              "Name": "central-network"
            },
            "tags_all": {
              "Name": "central-network"
            }
          }
        }
      ]
    }
  ]
}